Fix spacing for background image in intro

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,8 +1,9 @@
-body {
-    display: table;
-    background: url('img/photo4.jpg') no-repeat fixed;
-    background-size: 100% 100%;
+html, body {
     width: 100%;
+    height: 100%
+    background-color: #000000;
+    padding: 0;
+    margin: 0;
 }
 
 h1 {
@@ -15,12 +16,21 @@ h1 {
     /*border: 2px solid #FFFFFF;*/
     max-width: 1000px;
     margin: 5% auto;
-    padding-bottom:1000px;
+    margin-bottom: 37%;
 
 }
 
-.heading {
-    vertical-align: middle;
+.intro {
+    display: table;
+    background: url('img/photo4.jpg') no-repeat fixed;
+    background-size: 100%;
     width: 100%;
 }
+
+/*
+.heading {
+    vertical-align: middle;
+    height: 100%;
+}
+*/
 
